# komunikator_1_2

./: AES.cpp  AES.h  CMakeLists.txt  Cesar.h  FinalGui.cpp  FinalGui.h  Gui.cpp  Gui.h  GuiTr.cpp  GuiTr.h  Message.cpp  Message.h  README.md  TxtFile.cpp  TxtFile.h  Usecases.graphml  User.cpp  User.h  Visionera.cpp  Visionera.h  cesar.cpp  cesar.h  cypher.h  just_clearing.h  komunikator.graphml  main.cpp  receiver.cpp  receiver.h
